[package]
name = "esp-camera-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp-idf-hal = "0.42.5"
esp-idf-sys = "0.33.7"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp32-camera", version = "2.0.6" }
bindings_header = "bindings.h"
bindings_module = "camera"
